; ModuleID = '/home/carl/AnghaBench/kphp-kdb/cache/extr_cache-simulator.c_cache_access_short.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/cache/extr_cache-simulator.c_cache_access_short.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lev_cache_access_short = type { i64 }
%struct.cache_uri = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.lev_cache_access_short*, i32)* @cache_access_short to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cache_access_short(%struct.lev_cache_access_short* %0, i32 %1) #0 {
  %3 = alloca %struct.lev_cache_access_short*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.cache_uri*, align 8
  store %struct.lev_cache_access_short* %0, %struct.lev_cache_access_short** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load %struct.lev_cache_access_short*, %struct.lev_cache_access_short** %3, align 8
  %7 = getelementptr inbounds %struct.lev_cache_access_short, %struct.lev_cache_access_short* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = inttoptr i64 %8 to i32*
  %10 = call %struct.cache_uri* @cache_get_uri_by_md5(i32* %9, i32 8)
  store %struct.cache_uri* %10, %struct.cache_uri** %5, align 8
  %11 = load %struct.cache_uri*, %struct.cache_uri** %5, align 8
  %12 = load i32, i32* %4, align 4
  %13 = call i32 @uri_access(%struct.cache_uri* %11, i32 %12)
  ret void
}

declare dso_local %struct.cache_uri* @cache_get_uri_by_md5(i32*, i32) #1

declare dso_local i32 @uri_access(%struct.cache_uri*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
